syntax = "proto3";

package pl.stosik;

message TransactionCreatedEvent {
  string id = 1;
  string hostPaymentId = 2;
  string platformPaymentId = 3;
  string amount = 4;
  string createdAt = 5;
}